--- a/Web/config.conf
+++ b/Web/config.conf
@@ -1,4 +1,4 @@
 consumer_key='consumer_key'
-consumer_secret='consumer_secret'
+consumer_secret='12'
 access_token_key='access_token'
 access_token_secret='access_token_secret'
